--- a/session7-express/package.json
+++ b/session7-express/package.json
@@ -28,6 +28,7 @@
     "get-intrinsic": "^1.1.2",
     "has": "^1.0.3",
     "has-symbols": "^1.0.3",
+    "hbs": "^4.2.0",
     "http-errors": "^2.0.0",
     "iconv-lite": "^0.4.24",
     "inherits": "^2.0.4",
